--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "express": "^5.1.0",
     "resend": "^4.4.1"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  }
 }
